Sync all content

--- a/content/resources/10-2501-700x525.md
+++ b/content/resources/10-2501-700x525.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 68847d16-d962-0f2b-7563-d82fad77467d
 resourcetype: Image
 title: classroom
 uid: 0f750e9c-6ad3-452f-5582-ac4f9df524fa
