--- a/content/resources/58.md
+++ b/content/resources/58.md
@@ -7,6 +7,7 @@ image_metadata:
   caption: ''
   credit: ''
   image-alt: ''
+parent_uid: 68847d16-d962-0f2b-7563-d82fad77467d
 resourcetype: Image
 title: enrollment
 uid: 24877eb4-033d-8074-a753-94a06723cfdc
